--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
   "dependencies": {
     "@cap-js/hana": "^2",
     "@sap/cds": "^9",
-    "express": "^4",
-    "@sap/xssec": "^4"
+    "@sap/xssec": "^4",
+    "express": "^4"
   },
   "devDependencies": {
     "@cap-js/cds-test": "^0.4.1",
     "@cap-js/sqlite": "^2",
-    "cds-plugin-ui5": "^0.13.0",
-    "@sap/cds-dk": "^8.0.0"
+    "@sap/cds-dk": "^9.7.1",
+    "cds-plugin-ui5": "^0.13.0"
   },
   "scripts": {
     "test": "npx jest tests/test.js",
