Added multitenancy capability.

--- a/mta.yaml
+++ b/mta.yaml
@@ -26,15 +26,7 @@ modules:
           srv-url: ${default-url}
     requires:
       - name: incident-management-auth
-      - name: incident-management-db
       - name: incident-management-destination
-
-  - name: incident-management-db-deployer
-    type: hdb
-    path: gen/db
-    parameters:
-      buildpack: nodejs_buildpack
-    requires:
       - name: incident-management-db
 
   - name: incident-management-app-deployer
@@ -55,6 +47,26 @@ modules:
           artifacts:
             - incidents.zip
           target-path: app/
+    parameters:
+      config:
+        HTML5Runtime_enabled: true
+        init_data:
+          instance:
+            existing_destinations_policy: update
+            destinations:
+              - Name: srv-api
+                URL: ~{srv-api/srv-url}
+                Authentication: NoAuthentication
+                Type: HTTP
+                ProxyType: Internet
+                HTML5.ForwardAuthToken: true
+                HTML5.DynamicDestination: true
+
+              - Name: ui5
+                URL: https://ui5.sap.com
+                Authentication: NoAuthentication
+                Type: HTTP
+                ProxyType: Internet
 
   - name: incidentmanagementincidents
     type: html5
@@ -100,6 +112,39 @@ modules:
               ServiceKeyName: incident-management-auth-key
               sap.cloud.service: incidentmanagement.service
 
+  - name: incident-management-mtx
+    type: nodejs
+    path: gen/mtx/sidecar
+    requires:
+      - name: incident-management-auth
+      - name: incident-management-db
+      - name: incident-management-registry
+      - name: incident-management-destination
+      - name: incident-management-html5-runtime
+      - name: incident-management-html5-repo-host
+    build-parameters:
+      builder: npm-ci
+    parameters:
+      instances: 1
+      memory: 256M
+      disk-quota: 512M
+      tenant-mode: shared
+    hooks:
+      - name: upgrade-all
+        type: task
+        phases:
+          - blue-green.application.before-start.idle
+          - deploy.application.before-start
+        parameters:
+          name: upgrade
+          memory: 512M # increase as required
+          disk-quota: 768M # increase as required
+          command: cds-mtx upgrade '*'
+    provides:
+      - name: mtx-api
+        properties:
+          mtx-url: ${default-url}
+
 resources:
   - name: incident-management-auth
     type: org.cloudfoundry.managed-service
@@ -119,11 +164,6 @@ resources:
             description: 'generated'
             role-template-references:
               - '$XSAPPNAME.admin'
-  - name: incident-management-db
-    type: com.sap.xs.hdi-container
-    parameters:
-      service: hana
-      service-plan: hdi-shared
   - name: incident-management-destination
     type: org.cloudfoundry.managed-service
     parameters:
@@ -142,6 +182,15 @@ resources:
                 ProxyType: Internet
                 HTML5.ForwardAuthToken: true
                 HTML5.DynamicDestination: true
+          subaccount:
+            existing_destinations_policy: update
+            destinations:
+              - Name: incident-management-workzone-runtime
+                Authentication: NoAuthentication
+                Type: HTTP
+                ProxyType: Internet
+                URL: https://${org}.launchpad.${default-domain}
+                CEP.HTML5contentprovider: true
     requires:
       - name: srv-api
         group: destinations
@@ -160,3 +209,28 @@ resources:
     parameters:
       service: html5-apps-repo
       service-plan: app-runtime
+  - name: incident-management-db
+    type: org.cloudfoundry.managed-service
+    parameters:
+      service: service-manager
+      service-plan: container
+  - name: incident-management-registry
+    type: org.cloudfoundry.managed-service
+    requires:
+      - name: mtx-api
+    parameters:
+      service: saas-registry
+      service-plan: application
+      config:
+        xsappname: incident-management-${org}-${space}
+        appName: incident-management-${org}-${space}
+        displayName: incident-management
+        description: A simple CAP project.
+        category: 'Category'
+        appUrls:
+          getDependencies: ~{mtx-api/mtx-url}/-/cds/saas-provisioning/dependencies
+          onSubscription: ~{mtx-api/mtx-url}/-/cds/saas-provisioning/tenant/{tenantId}
+          onSubscriptionAsync: true
+          onUnSubscriptionAsync: true
+          onUpdateDependenciesAsync: true
+          callbackTimeoutMillis: 300000 # Increase if your deployments are taking longer than that
