temp mt testing

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@cap-js/hana": "^2",
     "@sap/cds": "^9",
+    "@sap/cds-mtxs": "^3",
     "@sap/xssec": "^4",
     "express": "^4"
   },
@@ -44,8 +45,12 @@
       },
       "destinations": true,
       "html5-runtime": true,
-      "workzone": true
-    }
+      "workzone": true,
+      "[local-multitenancy]": {
+        "multitenancy": true
+      }
+    },
+    "profile": "with-mtx-sidecar"
   },
   "private": true,
   "workspaces": [
